--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,35 @@ body {
   height: 100%;
   margin: 0;
 }
+
+.dirhistory-box {
+  @apply m-2 flex flex-grow flex-col-reverse overflow-auto rounded border border-gray-400 p-1;
+  @media (prefers-color-scheme: dark) {
+    background-color: #272822;
+  }
+}
+
+.dirhistory-item {
+  @apply block border-t p-0.5 font-mono text-sm;
+  @apply dark:border-gray-600;
+  @media (prefers-color-scheme: dark) {
+    /* color: #66d9ef; (cyan) */
+    color: #a6e22e;
+  }
+}
+
+.dirhistory-sel {
+  @apply bg-blue-300 dark:bg-[#75715E];
+}
+
+.dirhistory-hover:hover {
+  @apply hover:bg-blue-100 dark:hover:bg-[#414339];
+}
+
+.dirhistory-input {
+  @apply m-2 rounded border border-gray-400 p-1 font-mono focus:outline-none;
+  @apply dark:bg-gray-800 dark:text-gray-200;
+  @media (prefers-color-scheme: dark) {
+    color: #e6db74;
+  }
+}
