--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,14 @@ body {
   margin: 0;
 }
 
-.dirhistory-box {
+.selectlist-box {
   @apply m-2 flex flex-grow flex-col-reverse overflow-auto rounded border border-gray-400 p-1;
   @media (prefers-color-scheme: dark) {
     background-color: #272822;
   }
 }
 
-.dirhistory-item {
+.selectlist-item {
   @apply block border-t p-0.5 font-mono text-sm;
   @apply dark:border-gray-600;
   @media (prefers-color-scheme: dark) {
@@ -24,18 +24,18 @@ body {
   }
 }
 
-.dirhistory-sel {
+.selectlist-sel {
   @apply bg-blue-300;
   @media (prefers-color-scheme: dark) {
     background-color: hsl(50, 11%, 33%);
   }
 }
 
-.dirhistory-hover:hover {
+.selectlist-hover:hover {
   @apply hover:bg-blue-100 dark:hover:bg-[#414339];
 }
 
-.dirhistory-input {
+.selectlist-input {
   @apply m-2 rounded border border-gray-400 p-1 font-mono focus:outline-none;
   @apply dark:bg-gray-800 dark:text-gray-200;
   @media (prefers-color-scheme: dark) {
