Supporting shelp.css file

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ body {
     color: #f92672;
   } /* Fuchsia monokai */
   .hl-assignment {
-    color: magentaBright;
+    color: #f92672;
   }
   .hl-parameter {
     color: #66d9ef;
