dirHistory item color set to blue in light mode

--- a/src/assets/shelp.css
+++ b/src/assets/shelp.css
@@ -6,6 +6,7 @@
 
 .selectlist-item {
   /* Each item in the list of items */
+  color: #0000ff; /* Example: set text color in default light mode */
 }
 
 .selectlist-item i {
